# asm8085-lsp

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: ci.yml
asm8085_lsp/: __init__.py  __main__.py  diagnostics.py  instruction_docs.py  protocol.py  server.py
asm8085_lsp/asm8085_cli/: COMPLETE.md  FINAL_STATUS.md  STRUCTURE.md  __init__.py  __main__.py  cli.py
asm8085_lsp/asm8085_cli/commands/: __init__.py
asm8085_lsp/asm8085_cli/commands/benchmark/: __init__.py  benchmark.py
asm8085_lsp/asm8085_cli/commands/coverage/: __init__.py  coverage.py
asm8085_lsp/asm8085_cli/commands/debug/: __init__.py  debugger.py
asm8085_lsp/asm8085_cli/commands/diff/: __init__.py  diffing.py
asm8085_lsp/asm8085_cli/commands/disassemble/: __init__.py  disasm.py
asm8085_lsp/asm8085_cli/commands/export/: __init__.py  hex_export.py
asm8085_lsp/asm8085_cli/commands/learning/: __init__.py  cheat_sheet.py  explain.py  repl.py
asm8085_lsp/asm8085_cli/commands/memory/: __init__.py  memory_map.py
asm8085_lsp/asm8085_cli/commands/profile/: __init__.py  profiler.py
asm8085_lsp/asm8085_cli/commands/symbols/: __init__.py  symbols.py
asm8085_lsp/asm8085_cli/shared/: __init__.py  assembler.py  assembly.py  colors.py  config.py  constants.py  emu.py  executor.py  helptext.py  instruction_db.json  instruction_db.py  instructions.py  parsing.py  progress.py  registers.py  syntax.py  table.py
asm8085_lsp/asm8085_cli/tests/: test_analysis.py
asm8085_lsp/features/: __init__.py  completion.py  definition.py  hover.py  signature_help.py  symbols.py
asm8085_lsp/new_core/: emulator.py
examples/: README.md  hello.asm
scripts/: asm8085  build.sh  generate_db.py
(+4 files in other folders)
